set emptyAsNull to false for default

--- a/core/dbio/templates/snowflake.yaml
+++ b/core/dbio/templates/snowflake.yaml
@@ -20,11 +20,11 @@ core:
       TYPE = CSV
       RECORD_DELIMITER = '\n'
       ESCAPE_UNENCLOSED_FIELD = NONE
-      FIELD_OPTIONALLY_ENCLOSED_BY='0x22'
-      EMPTY_FIELD_AS_NULL=TRUE
+      FIELD_OPTIONALLY_ENCLOSED_BY = '0x22'
+      EMPTY_FIELD_AS_NULL = FALSE
       NULL_IF = '\\N'
-      SKIP_HEADER=1
-      REPLACE_INVALID_CHARACTERS=TRUE
+      SKIP_HEADER = 1
+      REPLACE_INVALID_CHARACTERS = TRUE
     )
     ON_ERROR = ABORT_STATEMENT
   copy_from_s3: |
@@ -38,11 +38,11 @@ core:
       TYPE = CSV
       RECORD_DELIMITER = '\n'
       ESCAPE_UNENCLOSED_FIELD = NONE
-      FIELD_OPTIONALLY_ENCLOSED_BY='0x22'
-      EMPTY_FIELD_AS_NULL=TRUE
+      FIELD_OPTIONALLY_ENCLOSED_BY = '0x22'
+      EMPTY_FIELD_AS_NULL = FALSE
       NULL_IF = '\\N'
-      SKIP_HEADER=1
-      REPLACE_INVALID_CHARACTERS=TRUE
+      SKIP_HEADER = 1
+      REPLACE_INVALID_CHARACTERS = TRUE
     )
     ON_ERROR = ABORT_STATEMENT
   copy_from_azure: |
@@ -55,11 +55,11 @@ core:
       TYPE = CSV
       RECORD_DELIMITER = '\n'
       ESCAPE_UNENCLOSED_FIELD = NONE
-      FIELD_OPTIONALLY_ENCLOSED_BY='0x22'
-      EMPTY_FIELD_AS_NULL=TRUE
+      FIELD_OPTIONALLY_ENCLOSED_BY = '0x22'
+      EMPTY_FIELD_AS_NULL = FALSE
       NULL_IF = '\\N'
-      SKIP_HEADER=1
-      REPLACE_INVALID_CHARACTERS=TRUE
+      SKIP_HEADER = 1
+      REPLACE_INVALID_CHARACTERS = TRUE
     )
     ON_ERROR = ABORT_STATEMENT
   copy_to_stage: |
@@ -71,7 +71,7 @@ core:
       NULL_IF = '\\N'
       COMPRESSION = GZIP
       ESCAPE_UNENCLOSED_FIELD = NONE
-      FIELD_OPTIONALLY_ENCLOSED_BY='0x22'
+      FIELD_OPTIONALLY_ENCLOSED_BY = '0x22'
     )
     HEADER = TRUE
   copy_to_s3: |
