use /oracle_client64.tar.gz

--- a/cmd/sling/Dockerfile
+++ b/cmd/sling/Dockerfile
@@ -5,21 +5,13 @@ RUN apt update && DEBIAN_FRONTEND=noninteractive apt install -y unzip alien liba
   rm -rf /var/lib/apt/lists /var/cache/apt
 
 # Install Oracle Instant Client
-# from https://apextips.blogspot.com/2019/09/installing-oracle-instant-client-on.html
 RUN cd /tmp && \
-  wget https://download.oracle.com/otn_software/linux/instantclient/193000/oracle-instantclient19.3-basiclite-19.3.0.0.0-1.x86_64.rpm && \
-  wget https://download.oracle.com/otn_software/linux/instantclient/193000/oracle-instantclient19.3-devel-19.3.0.0.0-1.x86_64.rpm && \
-  wget https://download.oracle.com/otn_software/linux/instantclient/193000/oracle-instantclient19.3-sqlplus-19.3.0.0.0-1.x86_64.rpm && \
-  wget https://download.oracle.com/otn_software/linux/instantclient/193000/oracle-instantclient19.3-tools-19.3.0.0.0-1.x86_64.rpm && \
-  alien -i oracle-instantclient19.3-*.rpm
+  wget https://ocral.nyc3.cdn.digitaloceanspaces.com/sling/public/oracle_client64.tar.gz && \
+  tar -xf oracle_client64.tar.gz && \
+  mkdir -p /usr/lib/oracle/19.3 && mv oracle_client64 /usr/lib/oracle/19.3/client64
 
-
-RUN echo ' \
-# Oracle Client environment
-export ORACLE_HOME=/usr/lib/oracle/19.3/client64 \
-export LD_LIBRARY_PATH=$ORACLE_HOME/lib:$LD_LIBRARY_PATH \
-export PATH="$PATH:$ORACLE_HOME/bin" \
-' >> /root/.bashrc
+ENV ORACLE_HOME="/usr/lib/oracle/19.3/client64"
+ENV LD_LIBRARY_PATH="/usr/lib/oracle/19.3/client64/lib"
 
 ## Install mssql-tools
 ## from https://docs.microsoft.com/en-us/sql/linux/sql-server-linux-setup-tools?view=sql-server-ver15#ubuntu
