clean up oracle_client64.tar.gz

--- a/cmd/sling/Dockerfile
+++ b/cmd/sling/Dockerfile
@@ -8,7 +8,8 @@ RUN apt update && DEBIAN_FRONTEND=noninteractive apt install -y unzip alien liba
 RUN cd /tmp && \
   wget https://ocral.nyc3.cdn.digitaloceanspaces.com/sling/public/oracle_client64.tar.gz && \
   tar -xf oracle_client64.tar.gz && \
-  mkdir -p /usr/lib/oracle/19.3 && mv oracle_client64 /usr/lib/oracle/19.3/client64
+  mkdir -p /usr/lib/oracle/19.3 && mv oracle_client64 /usr/lib/oracle/19.3/client64 && \
+  rm -f oracle_client64.tar.gz
 
 ENV ORACLE_HOME="/usr/lib/oracle/19.3/client64"
 ENV LD_LIBRARY_PATH="/usr/lib/oracle/19.3/client64/lib"
