--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -7,12 +7,11 @@ on:
       - main
 
 env:
-  GITHUB_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
-  AWS_ACCESS_KEY_ID: ${{ secrets.DO_SPACE_ACCESS_KEY}}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets.DO_SPACE_SECRET_KEY}}
-  PLAUSIBLE_URL: ${{ secrets.PLAUSIBLE_URL }}
-  SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
   GOPRIVATE: github.com/slingdata-io/*
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   build:
@@ -34,8 +33,7 @@ jobs:
       - name: Get the version
         id: get_version
         run: |
-          echo "BRANCH_NAME=${GITHUB_REF##*/}" >> $GITHUB_ENV
-          VERSION="$BRANCH_NAME.dev"
+          VERSION="${GITHUB_REF##*/}.dev"
           echo "VERSION -> $VERSION"
           echo ::set-output name=VERSION::$VERSION
 
@@ -73,11 +71,19 @@ jobs:
           echo "MATRIX_CONTEXT -> $MATRIX_CONTEXT"
           echo "RUNNER_CONTEXT -> $RUNNER_CONTEXT"
           echo "VERSION -> $VERSION"
+
       - name: Set up GoLang
         uses: actions/setup-go@v3
         with:
           go-version: "1.22"
           cache: false
+        
+      - name: Load Secrets
+        uses: flarco/infisical-action@v1
+        with:
+          version: 0.28.1
+          client_id: ${{ secrets.INFISICAL_CLIENT_ID }}
+          client_secret: ${{ secrets.INFISICAL_CLIENT_SECRET }}
 
       - name: Configure private token (Mac)
         if: runner.os == 'macOS'
