--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -88,6 +88,7 @@ jobs:
           version: 0.28.1
           client_id: ${{ secrets.INFISICAL_CLIENT_ID }}
           client_secret: ${{ secrets.INFISICAL_CLIENT_SECRET }}
+          use_system_python: true
 
       - name: Configure private token (Mac)
         if: runner.os == 'macOS'
