--- a/cmd/sling/tests/replications/r.07.yaml
+++ b/cmd/sling/tests/replications/r.07.yaml
@@ -8,3 +8,4 @@ defaults:
 streams:
   file://./cmd/sling/tests/files/parquet/*:
   file://./cmd/sling/tests/files/*.csv:
+  file://./cmd/sling/tests/files/test?.json:
