--- a/cmd/sling/tests/replications/r.09.yaml
+++ b/cmd/sling/tests/replications/r.09.yaml
@@ -7,4 +7,6 @@ defaults:
   sql: "select *, 'hi' there from {stream_name}"
 
 streams:
-  public.my_table*:
+  public.my_table:
+  public.my_table?:
+  public.my_table_*:
