--- a/core/dbio/templates/postgres.yaml
+++ b/core/dbio/templates/postgres.yaml
@@ -367,6 +367,8 @@ function:
   truncate_f: trunc({field})
   truncate_datef: trunc({field})
   string_type: text
+  cast_to_string: '{field}::text'
+  cast_to_text: '{field}::text'
   date_to_int: trunc(extract(epoch from {field})/(60*60*24))::int
   number_to_int: round({field}, 0)
   sleep: select pg_sleep({seconds})
