--- a/cmd/sling/Dockerfile.arm64
+++ b/cmd/sling/Dockerfile.arm64
@@ -1,6 +1,9 @@
 FROM --platform=linux/arm64 ubuntu:focal
 
-RUN apt update || true && DEBIAN_FRONTEND=noninteractive apt install -y unzip libaio1 postgresql-client wget curl gnupg && \
+RUN groupadd -r sling && useradd -r -g sling sling
+
+# Also install sqlcmd (for bcp)
+RUN apt update || true && DEBIAN_FRONTEND=noninteractive apt install -y unzip libaio1 postgresql-client wget curl gnupg sqlcmd && \
   apt clean && \
   rm -rf /var/lib/apt/lists /var/cache/apt
 
@@ -27,27 +30,17 @@ export PATH="$PATH:$ORACLE_HOME" \
 ' >> /root/.bashrc && \
   ldconfig
 
-## Install mssql-tools
-## from https://docs.microsoft.com/en-us/sql/linux/sql-server-linux-setup-tools?view=sql-server-ver15#ubuntu
-# RUN curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add -
-
-# RUN curl https://packages.microsoft.com/config/ubuntu/20.04/prod.list | tee /etc/apt/sources.list.d/msprod.list
-
-# DNS fails in next apt update
-# RUN echo 'nameserver 8.8.8.8 \
-#   nameserver 8.8.4.4' > /etc/resolv.conf
-
-# RUN export ACCEPT_EULA=y && apt update || true && apt install -y mssql-tools unixodbc-dev && \
-#   apt clean && \
-#   rm -rf /var/lib/apt/lists /var/cache/apt
-
-# RUN echo ' \
-# export PATH="$PATH:/opt/mssql-tools/bin"' >> /root/.bashrc
-
-ENV PATH="${PATH}:/usr/local/go/bin:/root/go/bin:/opt/mssql-tools/bin:/opt/oracle/instantclient_19_19"
-
-ENV SLING_PACKAGE="DOCKER"
-ADD sling /usr/local/bin/sling
+COPY --chown=sling:sling sling /usr/local/bin/sling
 RUN chmod 755 /usr/local/bin/sling
+
+# Switch to non-root user
+USER sling
+
+# Final ENV updates
+ENV ORACLE_HOME="/opt/oracle/instantclient_19_19"
+ENV LD_LIBRARY_PATH="/opt/oracle/instantclient_19_19/lib"
+ENV PATH="${PATH}:/usr/local/go/bin:/root/go/bin:/opt/oracle/instantclient_19_19"
+ENV SLING_PACKAGE="DOCKER"
+
 
 ENTRYPOINT ["sling"]
