--- a/cmd/sling/Dockerfile
+++ b/cmd/sling/Dockerfile
@@ -2,7 +2,7 @@ FROM ubuntu:focal
 
 RUN groupadd -r sling && useradd -r -g sling sling
 
-RUN apt update && DEBIAN_FRONTEND=noninteractive apt install -y unzip alien libaio1 postgresql-client wget curl && \
+RUN apt update && DEBIAN_FRONTEND=noninteractive apt install -y unzip libaio1 postgresql-client wget curl && \
   apt-get clean && \
   rm -rf /var/lib/apt/lists /var/cache/apt
 
