--- a/cmd/sling/Dockerfile.arm64
+++ b/cmd/sling/Dockerfile.arm64
@@ -2,24 +2,14 @@ FROM --platform=linux/arm64 ubuntu:focal
 
 RUN groupadd -r sling && useradd -r -g sling sling
 
-# Also install sqlcmd (for bcp)
-RUN apt update || true && DEBIAN_FRONTEND=noninteractive apt install -y unzip libaio1 postgresql-client wget curl gnupg sqlcmd && \
-  apt clean && \
-  rm -rf /var/lib/apt/lists /var/cache/apt
-
+RUN apt update || true && DEBIAN_FRONTEND=noninteractive apt install -y libaio1 postgresql-client wget curl && apt clean && rm -rf /var/lib/apt/lists /var/cache/apt
+  
 # Install Oracle Instant Client
-# from https://www.oracle.com/database/technologies/instant-client/linux-arm-aarch64-downloads.html
 RUN cd /tmp && \
-  wget https://download.oracle.com/otn_software/linux/instantclient/instantclient-basiclite-linux-arm64.zip && \
-  wget https://download.oracle.com/otn_software/linux/instantclient/instantclient-sdk-linux-arm64.zip && \
-  wget https://download.oracle.com/otn_software/linux/instantclient/instantclient-sqlplus-linux-arm64.zip && \
-  wget https://download.oracle.com/otn_software/linux/instantclient/instantclient-tools-linux-arm64.zip && \
-  unzip instantclient-basiclite-linux-arm64.zip && \
-  unzip instantclient-sdk-linux-arm64.zip && \
-  unzip instantclient-sqlplus-linux-arm64.zip && \
-  unzip instantclient-tools-linux-arm64.zip && \
-  mkdir -p /opt/oracle/ && \
-  mv instantclient_19_19 /opt/oracle/ && \
+  wget https://f.slingdata.io/oracle_client_arm64.tar.gz && \
+  tar -xf oracle_client_arm64.tar.gz && \
+  rm -f oracle_client_arm64.tar.gz && \
+  mkdir -p /opt/oracle && mv instantclient_19_19 /opt/oracle/ && \
   echo /opt/oracle/instantclient_19_19 > /etc/ld.so.conf.d/oracle-instantclient.conf
 
 RUN echo ' \
@@ -30,6 +20,12 @@ export PATH="$PATH:$ORACLE_HOME" \
 ' >> /root/.bashrc && \
   ldconfig
 
+## Install Sql Server BCP
+# RUN curl https://packages.microsoft.com/keys/microsoft.asc | tee /etc/apt/trusted.gpg.d/microsoft.asc
+# RUN curl https://packages.microsoft.com/config/ubuntu/20.04/prod.list | tee /etc/apt/sources.list.d/mssql-release.list
+# RUN apt update || true && DEBIAN_FRONTEND=noninteractive apt install -y mssql-tools18 && apt clean && rm -rf /var/lib/apt/lists /var/cache/apt
+
+# Copy sling binary
 COPY --chown=sling:sling sling /usr/local/bin/sling
 RUN chmod 755 /usr/local/bin/sling
 
@@ -38,8 +34,8 @@ USER sling
 
 # Final ENV updates
 ENV ORACLE_HOME="/opt/oracle/instantclient_19_19"
-ENV LD_LIBRARY_PATH="/opt/oracle/instantclient_19_19/lib"
-ENV PATH="${PATH}:/usr/local/go/bin:/root/go/bin:/opt/oracle/instantclient_19_19"
+ENV LD_LIBRARY_PATH="/opt/oracle/instantclient_19_19"
+ENV PATH="${PATH}:/usr/local/go/bin:/root/go/bin:/opt/oracle/instantclient_19_19:/opt/mssql-tools18/bin"
 ENV SLING_PACKAGE="DOCKER"
 
 
