update FileStreamConfig with incremental props

--- a/core/dbio/templates/motherduck.yaml
+++ b/core/dbio/templates/motherduck.yaml
@@ -7,6 +7,10 @@ core:
   insert_option: ""
   modify_column: 'alter {column} type {type}'
 
+  iceberg_scan: select {fields} from iceberg_scan('{uri}', allow_moved_paths = true) {where}
+  delta_scan: select {fields} from delta_scan('{uri}') {where}
+  parquet_scan: select {fields} from parquet_scan('{uri}') {where}
+
 
 metadata:
   databases: PRAGMA database_list
