--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -96,15 +96,28 @@ jobs:
       - name: Get MC Client (Unix)
         if: runner.os != 'windows'
         run: |
-          name=$(uname -s | tr "[:upper:]" "[:lower:]")
-          wget "https://dl.min.io/client/mc/release/$name-amd64/mc" && chmod +x mc
-          echo "$PWD" >> $GITHUB_PATH
+          # Check if MC is already available
+          if ! command -v mc &> /dev/null
+          then
+              echo "MC not found in path. Downloading..."
+              name=$(uname -s | tr "[:upper:]" "[:lower:]")
+              wget "https://dl.min.io/client/mc/release/$name-amd64/mc" && chmod +x mc
+              echo "$PWD" >> $GITHUB_PATH
+          else
+              echo "MC already in path"
+          fi
 
       - name: Get MC Client (Windows)
         if: runner.os == 'windows'
         run: |
           $ProgressPreference = 'SilentlyContinue'
-          Invoke-WebRequest -Uri "https://dl.min.io/client/mc/release/windows-amd64/mc.exe" -OutFile "mc.exe"
+          if (!(Get-Command mc.exe -ErrorAction SilentlyContinue)) {
+              Write-Output "MC not found in path. Downloading..."
+              Invoke-WebRequest -Uri "https://dl.min.io/client/mc/release/windows-amd64/mc.exe" -OutFile "mc.exe"
+              $env:PATH += ";$PWD"
+          } else {
+              Write-Output "MC already in path"
+          }
       
       - name: Build Sling (Linux)
         env:
@@ -149,6 +162,7 @@ jobs:
         env:
           VERSION: ${{ needs.build.outputs.VERSION }}
         if: runner.os == 'windows'
+        shell: pwsh
         run: |
           # Configure private token (Windows)
           $url = ("https://" + $env:GITHUB_TOKEN + ":x-oauth-basic@github.com/")
