--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -109,6 +109,10 @@ jobs:
           version: 'v1.26.2'
           args: release --clean --skip=validate -f .goreleaser.mac.yaml
 
+      - name: Post Tests
+        run: |
+          dist/sling_darwin_arm64/sling conns discover local
+
   release-scoop:
     # runs-on: [self-hosted, Windows]
     runs-on: windows-latest
@@ -147,6 +151,11 @@ jobs:
           version: 'v1.26.2'
           args: release --clean --skip=validate -f .goreleaser.windows.yaml
 
+      - name: Post Tests
+        shell: pwsh
+        run: |
+          .\dist\sling_windows_amd64\sling.exe conns discover local
+
   release-linux-arm64:
     runs-on: [self-hosted, Linux, ARM64]
     timeout-minutes: 20
@@ -176,6 +185,10 @@ jobs:
           distribution: goreleaser
           version: 'v1.26.2'
           args: release --clean --skip=validate -f .goreleaser.linux.arm64.yaml
+
+      - name: Post Tests
+        run: |
+          dist/sling_linux_arm64/sling conns discover local
 
       # pushing to docker manually
       # could not figure out how to make arm64 work in goreleaser
@@ -219,6 +232,10 @@ jobs:
           distribution: goreleaser
           version: 'v1.26.2'
           args: release --clean --skip=validate -f .goreleaser.linux.amd64.yaml
+
+      - name: Post Tests
+        run: |
+          dist/sling_linux_amd64/sling conns discover local
 
       - name: Dispatch test-sling-action
         uses: peter-evans/repository-dispatch@v2
