--- a/.github/workflows/test-docker-build.yml
+++ b/.github/workflows/test-docker-build.yml
@@ -66,6 +66,10 @@ jobs:
           version: 'v1.26.2'
           args: build --clean --skip=validate -f .goreleaser.mac.yaml
 
+      - name: Post Tests
+        run: |
+          dist/sling_darwin_arm64/sling conns discover local
+
   build-scoop:
     runs-on: windows-latest
     timeout-minutes: 20
@@ -101,6 +105,11 @@ jobs:
           version: 'v1.26.2'
           args: build --clean --skip=validate -f .goreleaser.windows.yaml
 
+      - name: Post Tests
+        shell: pwsh
+        run: |
+          .\dist\sling_windows_amd64\sling.exe conns discover local
+
   build-linux-arm64:
     runs-on: [self-hosted, Linux, ARM64]
     timeout-minutes: 20
@@ -131,6 +140,10 @@ jobs:
           distribution: goreleaser
           version: 'v1.26.2'
           args: build --clean --skip=validate -f .goreleaser.linux.arm64.yaml
+
+      - name: Post Tests
+        run: |
+          dist/sling_linux_arm64/sling conns discover local
 
   build-linux-amd64:
     # runs-on: ubuntu-20.04
@@ -163,3 +176,7 @@ jobs:
           distribution: goreleaser
           version: 'v1.26.2'
           args: build --clean --skip=validate -f .goreleaser.linux.amd64.yaml
+
+      - name: Post Tests
+        run: |
+          dist/sling_linux_amd64/sling conns discover local
