--- a/.goreleaser.linux.amd64.yaml
+++ b/.goreleaser.linux.amd64.yaml
@@ -6,9 +6,8 @@ before:
   hooks:
     - go mod edit -dropreplace='github.com/flarco/g' go.mod
     - go mod edit -dropreplace='github.com/slingdata-io/sling' go.mod
+    - go mod edit -droprequire='github.com/slingdata-io/sling' go.mod
     - go mod tidy
-    # you may remove this if you don't need go generate
-    - go generate ./...
 
 builds:
   - main: ./cmd/sling
