--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -111,7 +111,7 @@ jobs:
 
       - name: Post Tests
         run: |
-          dist/sling_darwin_arm64/sling conns discover local
+          dist/sling_darwin_arm64/sling conns discover local -p '.'
 
   release-scoop:
     # runs-on: [self-hosted, Windows]
@@ -154,7 +154,7 @@ jobs:
       - name: Post Tests
         shell: pwsh
         run: |
-          .\dist\sling_windows_amd64\sling.exe conns discover local
+          .\dist\sling_windows_amd64\sling.exe conns discover local -p '.'
 
   release-linux-arm64:
     runs-on: [self-hosted, Linux, ARM64]
@@ -188,7 +188,7 @@ jobs:
 
       - name: Post Tests
         run: |
-          dist/sling_linux_arm64/sling conns discover local
+          dist/sling_linux_arm64/sling conns discover local -p '.'
 
       # pushing to docker manually
       # could not figure out how to make arm64 work in goreleaser
@@ -235,7 +235,7 @@ jobs:
 
       - name: Post Tests
         run: |
-          dist/sling_linux_amd64/sling conns discover local
+          dist/sling_linux_amd64/sling conns discover local -p '.'
 
       - name: Dispatch test-sling-action
         uses: peter-evans/repository-dispatch@v2
