--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -10,54 +10,12 @@ env:
   GOPRIVATE: github.com/slingdata-io/*
 
 jobs:
-  build-for-test:
+
+  build-test:
     if: "! (contains(github.event.head_commit.message, '[skip ci]') || contains(github.event.head_commit.message, '[bump]'))"
-    runs-on: [self-hosted, linux, ubuntu-20]
-    timeout-minutes: 15
-
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          ref: ${{ github.event.client_payload.ref }}
-
-      - name: Set up GoLang
-        uses: actions/setup-go@v3
-        with:
-          go-version: "1.22"
-          cache: false
-          
-      # - uses: actions/cache@v3
-      #   with:
-      #     path: ~/go/pkg/mod
-      #     key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-go-
-        
-      - name: Configure private token
-        run: |
-          git config --global url."https://${GITHUB_TOKEN}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
-
-      - name: Build
-        env:
-          # VERSION: ${{ steps.get_version.outputs.VERSION }}
-          # VERSION: ${{ github.event.client_payload.version }}
-          VERSION: ${{ needs.bump.outputs.new_version }}
-          REF_NAME: ${{ github.ref_name }}
-        
-        run: |
-          echo "VERSION -> $VERSION"
-          echo "REF_NAME -> $REF_NAME"
-
-          bash scripts/prep.gomod.sh
-          bash scripts/build.test.sh $VERSION
-
-  test:
-    if: "! (contains(github.event.head_commit.message, '[skip ci]') || contains(github.event.head_commit.message, '[no test]') || contains(github.event.head_commit.message, '[nt]') || contains(github.event.head_commit.message, '[bump]'))"
-
-    needs: [build-for-test]
 
     runs-on: [self-hosted, linux, ubuntu-20]
-    timeout-minutes: 20
+    timeout-minutes: 25
 
     steps:
       - uses: actions/checkout@v2
@@ -66,11 +24,6 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           sha: ${{ github.sha }}
           status: pending
-        
-      - name: Configure Environment
-        uses: flarco/envkey-action@main
-        with:
-          envkey: ${{ secrets.ENVKEY }}
 
       - name: Set up GoLang
         uses: actions/setup-go@v3
@@ -78,9 +31,20 @@ jobs:
           go-version: "1.22"
           cache: false
         
-      - name: Configure private token
+      - name: Load Secrets
+        uses: flarco/infisical-action@v2
+        with:
+          version: 0.28.1
+          client_id: ${{ secrets.INFISICAL_CLIENT_ID }}
+          client_secret: ${{ secrets.INFISICAL_CLIENT_SECRET }}
+      
+      - name: Build Binary
         run: |
-          git config --global url."https://${GITHUB_TOKEN}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
+          # Prep
+          bash scripts/ci/prep.linux.sh
+
+          # build
+          bash scripts/ci/build.linux.sh dev
 
       - name: Run Go Tests (sling)
         run: |
@@ -89,8 +53,6 @@ jobs:
           # Oracle env
           export LD_LIBRARY_PATH=$ORACLE_HOME/lib:$LD_LIBRARY_PATH
           export PATH="$PATH:$ORACLE_HOME/bin"
-
-          bash scripts/prep.gomod.sh
           
           bash scripts/test.sh
 
@@ -101,8 +63,6 @@ jobs:
           # Oracle env
           export LD_LIBRARY_PATH=$ORACLE_HOME/lib:$LD_LIBRARY_PATH
           export PATH="$PATH:$ORACLE_HOME/bin"
-
-          bash scripts/prep.gomod.sh
 
           cd core/dbio
           bash scripts/test.sh
