--- a/cmd/sling/tests/replications/r.15.yaml
+++ b/cmd/sling/tests/replications/r.15.yaml
@@ -9,9 +9,16 @@ streams:
   sling_test/*iceberg:
     source_options:
       format: iceberg
+      limit: {iceberg_limit}
     object: public.sling_test_{stream_file_name}
+    update_key: l_commitdate
+    mode: {iceberg_mode} # if blank, defaults to full-refresh
 
   sling_test/delta:
     source_options:
       format: delta
     object: public.sling_test_{stream_file_name}
+
+env:
+  iceberg_limit: $ICEBERG_LIMIT
+  iceberg_mode: $ICEBERG_MODE
