--- a/cmd/sling/tests/replications/r.15.yaml
+++ b/cmd/sling/tests/replications/r.15.yaml
@@ -9,7 +9,7 @@ streams:
   sling_test/*iceberg:
     source_options:
       format: iceberg
-      limit: '{iceberg_limit}'
+      limit: 100
     object: public.sling_test_{stream_file_name}
     update_key: l_commitdate
     mode: '{iceberg_mode}' # if blank, defaults to full-refresh
